RESOLVED FIXED88046
Incorrect border rendering when border radius is above 2px
https://bugs.webkit.org/show_bug.cgi?id=88046
Summary Incorrect border rendering when border radius is above 2px
Takashi Sakamoto
Reported 2012-05-31 21:55:15 PDT
Attachments
Patch (8.03 KB, patch)
2012-05-31 23:11 PDT, Takashi Sakamoto
no flags
Takashi Sakamoto
Comment 1 2012-05-31 23:11:44 PDT
WebKit Review Bot
Comment 2 2012-06-07 15:12:54 PDT
Comment on attachment 145213 [details] Patch Clearing flags on attachment: 145213 Committed r119760: <http://trac.webkit.org/changeset/119760>
WebKit Review Bot
Comment 3 2012-06-07 15:13:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.