Incorrect border rendering when border radius is above 2px. https://bugs.webkit.org/show_bug.cgi?id=88046

Source/WebCore:

Fixing findInnerVertex's logic to decide which is the better line
to find an inner vertex, x=center point's x of a rendering box or
y=center point's y of a rendering box.

Patch by Takashi Sakamoto <tasak@google.com> on 2012-06-07
Reviewed by Simon Fraser.

Test: fast/borders/border-radius-valid-border-clipping.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::findInnerVertex):

LayoutTests:

Patch by Takashi Sakamoto <tasak@google.com> on 2012-06-07
Reviewed by Simon Fraser.

* fast/borders/border-radius-valid-border-clipping-expected.txt: Added.
* fast/borders/border-radius-valid-border-clipping.html: Added.
* platform/chromium-mac/fast/borders/border-radius-valid-border-clipping-expected.png: Added.

Canonical link: https://commits.webkit.org/106399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119760 268f45cc-cd09-0410-ab3c-d52691b4dbfc